# core-eng

.github/workflows/: rust.yml
.install/: bitcoin.sh
btctool/: .gitignore  README.md  docker-run.sh  install.sh  pyproject.toml
btctool/btctool/: btctool.py  consolidate.py  responses.json  sign_command.py  tx_utils.py  utxo_utils.py
sbtc-planning/: commit-reveal-ops.md
stacks-coordinator/: Cargo.toml
stacks-coordinator/src/: config.rs  coordinator.rs  make_contract_call.rs  peg_wallet.rs  stacks_transaction.rs  stacks_wallet.rs
stacks-coordinator/src/stacks_node/: client.rs  mod.rs
stacks-coordinator/tests/: make_contract_call_tests.rs  stacks_wallet_js_tests.rs
